apps/staging/echo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
  annotations:
    chaos-mesh.org/inject: enabled
